--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-graft src/nrelclass2013/sphinx_build/html
-recursive-include src/nrelclass2013/test *.py
+graft src/nreltraining2013/sphinx_build/html
+recursive-include src/nreltraining2013/test *.py
 
